--- a/Build-an-R-GIS-server.org
+++ b/Build-an-R-GIS-server.org
@@ -795,7 +795,31 @@ make install
 
 Again using XLauch lets test ESS with Emacs.
 Firstly logged in as "dave" we need to create .emacs file with the following
+#(load "/usr/local/share/emacs-24.1/site-lisp/ess-5.13/lisp/ess-site")
 (load "/usr/local/share/emacs-24.1/site-lisp/ess-5.13/lisp/ess-site")
+; Must have org-mode loaded before we can configure org-babel
+(require 'org-install)
+
+; Some initial langauges we want org-babel to support
+(org-babel-do-load-languages
+ 'org-babel-load-languages
+ '(
+   (sh . t)
+   (python . t)
+   (R . t)
+   (ruby . t)
+   (ditaa . t)
+   (dot . t)
+   (octave . t)
+   (sqlite . t)
+   (perl . t)
+   ))
+
+; Add short cut keys for the org-agenda
+(global-set-key "\C-cl" 'org-store-link)
+(global-set-key "\C-cc" 'org-capture)
+(global-set-key "\C-ca" 'org-agenda)
+
 this file will need to be in each users home directory.
 try hist(rnorm(1000,1,2))
 *** testing with ess 5.14 (failed?)
