--- a/Build-an-R-GIS-desktop.org
+++ b/Build-an-R-GIS-desktop.org
@@ -44,6 +44,7 @@ git submodule update
 # errors on ubuntu?
 # try http://blog.revolutionanalytics.com/2009/11/installing-ess-on-ubuntu.html
 sudo apt-get install ess
+# nope, didn't work either.
 # check ssh
 #+begin_src sh :session *shell*
 whoami
