--- a/Build-an-R-GIS-desktop.org
+++ b/Build-an-R-GIS-desktop.org
@@ -29,7 +29,8 @@ sudo apt-get install r-base r-base-dev
 sudo apt-get install git-core
 * emacs
 sudo add-apt-repository ppa:cassou/emacs
-sudo apt-get install emacs-snapshot
+sudo apt-get update
+sudo apt-get install emacs24 emacs24-el
 * tex-live
 sudo apt-get install texlive-full
 * starter kit and ess
