--- a/Build-an-R-GIS-desktop.org
+++ b/Build-an-R-GIS-desktop.org
@@ -124,3 +124,7 @@ Today I am loading some data files that are too large for my laptop to handle. S
 
 Once you have done this, you can evaluate lines or regions of text from your local .R script, but have the execution all take place on the EC2 machine.
 
+* the dock
+try sudo apt-get install avant-window-navigator
+then in dash you can vind avant settings, add to autostart
+ala http://reformedmusings.wordpress.com/2010/06/12/avant-window-navigator-awn-in-ubuntu-karmic-10-04-lts/
